[gd_scene load_steps=4 format=3 uid="uid://7j07h0ry5iqc"]

[ext_resource type="Script" uid="uid://c2sydbvnq1w6e" path="res://ui.gd" id="1_27fn8"]
[ext_resource type="Theme" uid="uid://ciq7v36h25hm0" path="res://creeps-theme.tres" id="1_fyqef"]
[ext_resource type="Texture2D" uid="uid://djxjiq3n54rqk" path="res://art/settings_icon.png" id="2_m6e0p"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_27fn8")

[node name="Menus" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Menus"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 460.0
offset_bottom = 700.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.356863, 0.27451, 0.466667, 1)
metadata/_edit_group_ = true

[node name="BaseMenu" type="VBoxContainer" parent="Menus"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 51.5
offset_top = 75.5
offset_right = 388.5
offset_bottom = 604.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="Menus/BaseMenu"]
layout_mode = 2
theme = ExtResource("1_fyqef")
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Levels" type="Button" parent="Menus/BaseMenu"]
layout_mode = 2
theme = ExtResource("1_fyqef")
theme_type_variation = &"FlatButton"
text = "Levels"

[node name="Difficulty" type="Button" parent="Menus/BaseMenu"]
layout_mode = 2
theme = ExtResource("1_fyqef")
theme_type_variation = &"FlatButton"
text = "Difficulty"

[node name="Accessibility" type="Button" parent="Menus/BaseMenu"]
layout_mode = 2
theme = ExtResource("1_fyqef")
theme_type_variation = &"FlatButton"
text = "Accessibility"

[node name="Levels" type="VBoxContainer" parent="Menus"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 51.5
offset_top = 75.5
offset_right = 388.5
offset_bottom = 604.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="Menus/Levels"]
layout_mode = 2
theme = ExtResource("1_fyqef")
text = "Levels"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Lvl1" type="Button" parent="Menus/Levels"]
layout_mode = 2
theme = ExtResource("1_fyqef")
theme_type_variation = &"FlatButton"
text = "Level 1"

[node name="Lvl2" type="Button" parent="Menus/Levels"]
layout_mode = 2
theme = ExtResource("1_fyqef")
theme_type_variation = &"FlatButton"
text = "Level 2"

[node name="Difficulty" type="VBoxContainer" parent="Menus"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 51.5
offset_top = 75.5
offset_right = 388.5
offset_bottom = 604.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="Menus/Difficulty"]
layout_mode = 2
theme = ExtResource("1_fyqef")
text = "Difficulty"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Easy" type="Button" parent="Menus/Difficulty"]
layout_mode = 2
theme = ExtResource("1_fyqef")
theme_type_variation = &"FlatButton"
text = "Easy"

[node name="Medium" type="Button" parent="Menus/Difficulty"]
layout_mode = 2
theme = ExtResource("1_fyqef")
theme_type_variation = &"FlatButton"
text = "Medium"

[node name="Hard" type="Button" parent="Menus/Difficulty"]
layout_mode = 2
theme = ExtResource("1_fyqef")
theme_type_variation = &"FlatButton"
text = "Hard"

[node name="Accessibility" type="VBoxContainer" parent="Menus"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 51.5
offset_top = 75.5
offset_right = 388.5
offset_bottom = 604.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="Menus/Accessibility"]
layout_mode = 2
theme = ExtResource("1_fyqef")
text = "Accessibility"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SimpleFont" type="CheckButton" parent="Menus/Accessibility"]
layout_mode = 2
theme = ExtResource("1_fyqef")
theme_type_variation = &"FlatButton"
text = "Simple Font"
alignment = 1
icon_alignment = 2
expand_icon = true

[node name="LeaveOptions" type="HBoxContainer" parent="Menus"]
layout_mode = 0
offset_left = 72.0
offset_top = 576.0
offset_right = 409.0
offset_bottom = 631.0
theme_override_constants/separation = 135
alignment = 1

[node name="Back" type="Button" parent="Menus/LeaveOptions"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("1_fyqef")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 36
text = "Back"

[node name="Exit" type="Button" parent="Menus/LeaveOptions"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("1_fyqef")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 36
text = "Exit"

[node name="SettingsIcon" type="TextureButton" parent="."]
offset_left = 409.0
offset_top = 649.0
offset_right = 806.0
offset_bottom = 1046.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("2_m6e0p")

[connection signal="pressed" from="Menus/BaseMenu/Levels" to="." method="levels"]
[connection signal="pressed" from="Menus/BaseMenu/Difficulty" to="." method="difficulty"]
[connection signal="pressed" from="Menus/BaseMenu/Accessibility" to="." method="accessibility"]
[connection signal="pressed" from="Menus/Levels/Lvl1" to="." method="lvl_1"]
[connection signal="pressed" from="Menus/Levels/Lvl2" to="." method="lvl_2"]
[connection signal="pressed" from="Menus/Difficulty/Easy" to="." method="change_difficulty" binds= [0.8]]
[connection signal="pressed" from="Menus/Difficulty/Medium" to="." method="change_difficulty" binds= [0.4]]
[connection signal="pressed" from="Menus/Difficulty/Hard" to="." method="change_difficulty" binds= [0.2]]
[connection signal="toggled" from="Menus/Accessibility/SimpleFont" to="." method="simple_theme"]
[connection signal="pressed" from="Menus/LeaveOptions/Back" to="." method="go_back"]
[connection signal="pressed" from="Menus/LeaveOptions/Exit" to="." method="menu_toggle"]
[connection signal="pressed" from="SettingsIcon" to="." method="menu_toggle"]
